# openxml-audit

./: .gitignore  CLAUDE.md  Presentation1.pptx  README.md  SPEC.md  TASKS.md  pyproject.toml
.github/workflows/: validate-inputs.yml
data/openxml/: .sdk_version
inputs/: README.md
scripts/: benchmark_validation.py  compare_with_sdk.py  compare_with_sdk_batch.py  sync_openxml_data.py  update_from_sdk.py
scripts/sdk_check/: Program.cs
scripts/sdk_compare/: OpenXmlSdkValidator.csproj  Program.cs
specs/: 001-exhaustive-schematron-validation.md  001-exhaustive-schematron-validation.tasks.md
src/openxml_audit/: __init__.py  binary.py  cli.py  context.py  errors.py  helpers.py  namespaces.py  package.py  parts.py  relationships.py  validator.py
src/openxml_audit/codegen/: __init__.py  constraint_bridge.py  schema_loader.py  schematron_bridge.py  schematron_loader.py
src/openxml_audit/core/: __init__.py  context.py  errors.py  package.py
src/openxml_audit/excel/: __init__.py  workbook.py
src/openxml_audit/odf/: __init__.py  package.py  validator.py
src/openxml_audit/pptx/: __init__.py  masters.py  presentation.py  slides.py  themes.py
src/openxml_audit/schema/: __init__.py  constraints.py  particle.py  types.py  validator.py
src/openxml_audit/semantic/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  fixture_loader.py  test_binary_validation.py  test_cross_part_constraint.py  test_helpers.py  test_integration.py  test_package.py  test_relationships.py  test_schema_types.py  test_schematron_coverage.py  test_validator.py  test_word_excel_integration.py
(+53 files in other folders)
