[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openxml-audit"
version = "0.1.0"
description = "Validate OOXML and ODF packages against schema and semantic rules"
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
openxml-audit = "openxml_audit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openxml_audit"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["openxml_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
